# scutserver

./: Makefile.am  Makefile.in  README.md  configure  configure.in
src/: functions.c  info.c  main.c
