AUTOMAKE_OPTIONS=foreign   #只检测必要文件
bin_PROGRAMS=scutserver #指定所要产生的可执行文件的文件名
#指定产生“scutserver”时所需要的源代码和头文件
scutserver_SOURCES=\
		src/main.c \
		src/functions.c \
		src/young.c \
		src/info.c \	
		src/drcom.c \
		src/tracelog.c \
		src/md5.c \
		src/md5.h \
		src/functions.h \
		src/young.h \
		src/info.h \	
		src/drcom.h \
		src/tracelog.h \
		$(NULL)


